--- a/style.css
+++ b/style.css
@@ -904,7 +904,32 @@ td {
   padding: 0.4375em;
 }
 
-
+.gradient_left_right:before {
+  content: '' !important;
+  position: absolute !important;
+  top: 50% !important;
+  left: -20% !important;
+  width: 700px !important;
+  height: 700px !important;
+  -webkit-filter: blur(80px);
+  filter: blur(80px);
+  background: radial-gradient(circle at 100% 100%, #8f4d5d, transparent);
+  opacity: 0.2 !important;
+  transform: translateY(-50%);
+}
+.gradient_left_right:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -10%;
+  width: 700px;
+  height: 700px;
+  -webkit-filter: blur(80px);
+  filter: blur(80px);
+  background: radial-gradient(circle at 100% 100%, #8f4d5d, transparent);
+  opacity: 0.4;
+  transform: translateY(-50%);
+}
 
 .border_clr.elementor-widget-divider.elementor-view-framed .elementor-icon, 
 .border_clr.elementor-widget-divider.elementor-view-default .elementor-icon svg {
