--- a/style.css
+++ b/style.css
@@ -913,7 +913,7 @@ td {
   height: 700px !important;
   -webkit-filter: blur(80px);
   filter: blur(80px);
-  background: radial-gradient(circle at 100% 100%, #8f4d5d, transparent);
+  background: radial-gradient(circle at 100% 100%, var(--primary-color), transparent);
   opacity: 0.2 !important;
   transform: translateY(-50%);
 }
@@ -926,7 +926,7 @@ td {
   height: 700px;
   -webkit-filter: blur(80px);
   filter: blur(80px);
-  background: radial-gradient(circle at 100% 100%, #8f4d5d, transparent);
+  background: radial-gradient(circle at 100% 100%, var(--primary-color), transparent);
   opacity: 0.4;
   transform: translateY(-50%);
 }
