--- a/style.css
+++ b/style.css
@@ -4371,6 +4371,7 @@ object {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+  border: 4px solid var(--white-color);
 }
 .xp-image-box .content-box {
   padding: 30px 30px 27px;
